--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+button {
+    color: #ff0000;
+    background-color: #c7dbff;
+    font-size: 19px;
+    border: 3px solid #0059ff;
+    border-radius: 14px;
+    padding: 15px 50px;
+    cursor: pointer
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button:hover {
+    color: #0059ff;
+    background-color: #00233d;
 }
